app/styles/header.css
#exit {
  cursor: pointer;
  margin-left: 65%;
}
.header-menu-logo-burger {
  color: #000 !important;
  fill: #fff !important;
}

.first-row {
  width: 100%;
}

.shadow {
  position: absolute;
  width: 100vw;
  height: 100vh;
  z-index: 80;
}
.left-bar {
  height: 100%;
  position: fixed;
  z-index: 99;
  width: 80px;
}
.bold-span {
  font-family: "lato";
  letter-spacing: 3.6px;
  font-weight: bold;
  font-size: 8px;
}
.inside-bar {
  height: 100%;

  position: relative;
  z-index: 99;
  width: 80px;
}
.inside-bar:hover {
  cursor: pointer;
}
.bmenu-container {
  position: absolute;
  margin: auto;
  left: 20px;
  top: 40%;
  bottom: 0;
}
html {
  /* overflow: hidden; */
  overflow-x: hidden;
}

.drawer {
  width: 100%;
  display: block;
  padding-left: 20px !important;
  padding-right: 20px;
  overflow-y: hidden;
  height: 100%;
  background-color: #0d0d0d;
  z-index: 99;
  transition: all 0.5s;
  color: #fff;
  padding-top: 20px;
  font-family: Lato !important;
}
.row {
  padding-left: 15px;
}
.subdrawer {
  min-height: 200px;
  text-align: left;
  border-left: 2px solid #fff;
  background-color: #0d0d0d;
  width: 300px;
  margin-top: -120px;
  margin-left: 215px;
  font-family: Lato !important;
  position: absolute;
  display: none;
  font-weight: 100;
}
.subdrawer2 {
  height: 200px;
  text-align: left;
  border-left: 2px solid #fff;
  background-color: #0d0d0d;
  width: 250px;
  margin-top: -120px;
  margin-left: 250px;
  font-family: Lato !important;
  position: absolute;
  display: none;
}
.subdrawer3 {
  height: 200px;
  text-align: left;
  border-left: 2px solid #fff;
  background-color: #0d0d0d;
  width: 250px;
  margin-top: -120px;
  margin-left: 250px;
  font-family: Lato !important;
  position: absolute;
  display: none;
}
.subdrawer4 {
  height: 200px;
  text-align: left;
  border-left: 2px solid #fff;
  background-color: #0d0d0d;
  width: 250px;
  margin-top: -95px;
  margin-left: 250px;
  font-family: Lato !important;
  position: absolute;
  display: none;
}
.subdrawer5 {
  height: 200px;
  text-align: left;
  border-left: 2px solid #fff;
  background-color: #0d0d0d;
  width: 250px;
  margin-top: -120px;
  margin-left: 250px;
  font-family: Lato !important;
  position: absolute;
  display: none;
}
.subdrawer6 {
  height: 200px;
  text-align: left;
  border-left: 2px solid #fff;
  background-color: #0d0d0d;
  width: 250px;
  margin-top: -120px;
  margin-left: 250px;
  font-family: Lato !important;
  position: absolute;
  display: none;
}
.subtitle {
  font-family: "Lato";
  font-size: 14px;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: 4.2px;
  cursor: pointer;
  text-align: center;
  color: #fffefd;
}
.mediumtitle {
  font-size: 13px;
  color: #fff;
}
.mediumtitle:hover {
  text-decoration: none;
  font-weight: bold;
  color: #fff;
  color: inherit;
  text-decoration: none;
}
.title {
  font-size: 15px;
  letter-spacing: 2px;
  padding-top: 20px;
  color: #fff;
  font-weight: bold;
}
.icon {
  background-color: #fff;
  width: 60px;
  height: 60px;
}

.row-padded {
  padding-top: 20px;
  padding-left: 5%;
}
.icon-row {
  padding-top: 20px;
  padding-left: 5%;
}
.icon-row-two {
  padding-top: 20px;
  padding-left: 5%;
}
.icon-row-organizations {
  padding-top: 20px;
  padding-left: 4%;
}
.icon {
}
#shadow {
  position: fixed;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 98;
  display: none;
}

.first-option {
  font-size: 15px;
  letter-spacing: 1px;
  font-family: Lato;
  font-style: normal;
  font-stretch: normal;
  letter-spacing: -0.4px;
  padding-top: 0px;
  padding-left: 30px;
  color: #fff;
  width: 100%;
}
.first-option-link-one {
  font-size: 15px;
  letter-spacing: 1px;
  padding-left: 40px;
  color: #fff;
  color: inherit;
  text-decoration: none;
}

.first-option-link {
  font-size: 15px;
  letter-spacing: 1px;
  padding-left: 25px;
  color: #fff;
  color: inherit;
  text-decoration: none;
}
.first-option-link-one:hover {
  color: #fff;
  text-decoration: none;
  font-weight: bold;
  color: #fff;
  color: inherit;
  text-decoration: none;
}
.first-option-link:hover {
  color: #fff;
  text-decoration: none;
  font-weight: bold;
  color: #fff;
  color: inherit;
  text-decoration: none;
}
.first-option:hover {
  font-weight: bold;
  color: #fff;
  color: inherit;
  text-decoration: none;
  cursor: pointer;
}

.Menu {
  color: #fff;
  margin-left: -5px;
}

.CrossText {
  color: #fff;
  margin-left: -12px;
}
.bmenuu {
  height: 30px;
  width: 30px;
  cursor: pointer !important;
}
.cross {
  height: 30px;
  width: 30px;
  cursor: pointer !important;
}
#cross {
  display: none;
}

.bmenu-container:hover {
  /* Start the shake animation and make the animation last for 0.5 seconds */
}

.logo-bg {
  background-color: #5495c0;
  width: 100%;

  min-height: 60px;
}
.logo {
  margin-left: 22px;
  margin-top: 10px;
}

header {
  min-height: 50px;
}
header .md-toolbar-tools {
  color: #5495c0;
  background-color: white;
  min-height: 50px;
  height: 60px;
}

header .header-left {
}
header .header-left .header-logo {
}
header .header-left .header-logo img {
  width: 100%;
}
header .header-left .header-menu span {
  text-transform: capitalize;
  font-size: 15px;
  font-weight: bold;
  color: #5495c0;
}
header .header-left .header-menu md-icon svg {
  fill: #5495c0;
}
md-toolbar.md-default-theme:not(.md-menu-toolbar) .md-button:not(.md-raised),
md-toolbar:not(.md-menu-toolbar) .md-button:not(.md-raised) {
  color: #000;
  font-weight: bold;
}
header .header-right {
}
header .header-right .header-lang {
  color: black;
  font-weight: bold;
  padding: 0 10px;
  background-color: #f3f3f3;
  color: #000 !important;
}

header .header-right .header-lang svg {
  width: 70%;
  fill: black;
}
header .header-lang-options {
  position: absolute;
  top: 80%;
  right: 24px;
  min-width: 200px;
  background-color: #fff;
}
header .header-lang-options {
  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
}
header .header-lang-options .md-button {
  text-align: left;
  padding: 0;
  margin: 0;
  padding-left: 20px;
  padding-top: 8px;
  padding-bottom: 8px;
}
header .header-lang-options .legend {
  border-bottom: 1px solid #a1a1a1;
}

header .header-sidenav,
header .header-sidenav .md-sidenav-left {
  -webkit-transform: none;
  transform: none;
  width: 50%;
  height: 100vh;
  position: fixed;
  left: 0;
  top: 0;
  z-index: 99999;
  background-color: #fff;
}
header .header-sidenav .md-toolbar-tools {
  padding-left: 35px;
  min-height: 85px;
  color: white;
  background-color: #fff;
}
header .header-sidenav .sidenav-block {
  padding-left: 35px;
  padding-right: 35px;
  border-top: 1px solid #202122;
}
header .header-sidenav .sidenav-block h3 {
  font-size: 16px;
  color: white;
}
header .header-sidenav .sidenav-block p {
  color: #474d4d;
  font-weight: bold;
}
header .header-sidenav .sidenav-block ul {
  list-style: disc;
}
header .header-sidenav .sidenav-block ul li {
  margin-top: 5px;
}
header .header-sidenav * {
}
.sideButton * {
  float: left;
  margin: 10px;
  color: #fff !important;
}

.header-lang-options button {
  color: #000 !important;
}

.header-fixed {
  position: fixed;
  width: 100% !important;
  left: 0;
  top: 0;
}

.active-menu-hover{
  position: absolute;
  width: 4%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: 10;
}

.active-sidenav-menu{
  display: block;
  margin-left: 0;
  transition: all 0.5s;
}
.sidenav-menu{
  width: 100%;
}

.sidenav-item{
  flex-basis: 100%;
}

.sd-item{
  color: inherit;
  display: inline-block;
  width: 100%;
}

.sidenav-active .sd-item{
  color: white;
  text-decoration: none;
  font-weight: 700;
}

.sidenav-selected, .sidenav-selected a.sd-item{
  color: gray;
}

.sidenav-selected img{
  filter: invert(70%);
}

.sidenav-item .first-option:hover .subdrawer{
  display: block;
  z-index: 999999;
}

.subdrawer ul{
  padding: 0 20px;
}

@media screen and (max-width: 960px) and (min-width: 620px) {
  header .header-sidenav, header .header-sidenav .md-sidenav-left{
    min-width: 70%;
  }
}

@media screen and (max-width: 620px) and (min-width: 360px){
  header .header-sidenav, header .header-sidenav .md-sidenav-left{
    min-width: 90%;
  }
}

@media screen and (max-width: 360px){
  header .header-sidenav, header .header-sidenav .md-sidenav-left{
    min-width: 100%;
  }

  header .sidenav-item .first-option .subdrawer ul {
    padding: 0 5px;
    margin: 1px;
  }

  header .sidenav-item .first-option:hover .subdrawer{
    position: relative;
    display: inline-grid;
    margin: 0;
    min-height: auto;
  }
}

@media screen and (max-width: 620px) {
  header .title{
    font-size: 11px;
  }

  header .header-sidenav .sidenav-item{
    padding-top:5px;
  }

  header .sd-item{
    font-size: 11px;
  }

  header .sidenav-item img{
    width: 15px;
    height: 17px;
  }

  header .sd-item{
    padding-left: 10px;
  }

  header .first-option{
    padding-left: 10px;
  }

  header .subdrawer{
    margin-left: 130px;
  }
}

